altered RegisterWithBaseurl_Test to more reliably run the "ignored" data row, removed it's dependency on the successful run of the prior test row